--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+  <title>The Port | CUSail </title>
   <link rel="stylesheet" href="styles.css">
   <script src="https://www.gstatic.com/firebasejs/7.15.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-firestore.js"></script>
@@ -21,7 +22,7 @@
 
     <div class="content">
 
-      <form id="add-link-form">
+      <!-- <form id="add-link-form">
         <input class="name" type="text" name="name" placeholder="Name">
         <input class="shortcut" type="text" name="shortcut" placeholder="Shortcut (one word)">
         <input class="link" type="text" name="link" placeholder="Link">
@@ -33,7 +34,7 @@
           <option value="BOps"> BOps </option>
         </select>
         <button> ADD </button>
-      </form>
+      </form> -->
 
       <div class="filter-wrapper" id="filter">
         <button class="filter" onclick="filterSelection('all')" id="all"> All</button>
@@ -44,11 +45,41 @@
       </div>
 
       <table>
+        <col class="name">
+        <col class="shortcut">
+        <col class="link">
+        <col class="tag">
+        <col class="action">
+        <col class="action">
         <thead>
-          <td>Name</td>
-          <td>Shortcut</td>
-          <td>Link</td>
-          <td>Tag</td>
+          <tr>
+            <td>Name</td>
+            <td>Shortcut</td>
+            <td>Link</td>
+            <td>Tag</td>
+            <!-- <td><button onclick="showFilter()" id="filterButton">F</button></td> -->
+            <td></td>
+          </tr>
+          <tr>
+            <form id="add-link-form">
+              <td> <input type="text" name="name" placeholder="Name"> </td>
+              <td> <input type="text" name="shortcut" placeholder="Shortcut (one word)"></td>
+              <td> <input type="text" name="link" placeholder="Link"></td>
+              <td>
+                <select name="tag">
+                  <option value=" "> Tag </option>
+                  <option value="General"> General </option>
+                  <option value="Mech"> Mech </option>
+                  <option value="Nav"> Nav </option>
+                  <option value="BOps"> BOps </option>
+                </select>
+              </td>
+              <td></td>
+              <td class="icon">
+                <button> + </button>
+              </td>
+            </form>
+          </tr>
         </thead>
         <tbody id="linktable">
         </tbody>
