better looking login

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <div class="wrapper">
     <div class="header">
-      <button> SIGN IN </button>
+      <button onclick="signOut()"> SIGN OUT </button>
       <h2>THE PORT</h2>
       <h3>a central place for autonomous sailboaty things.</h3>
     </div>
@@ -116,6 +116,7 @@
   </div>
 
   <script src="links.js"></script>
+  <script src="login.js"></script>
 </body>
 
 </html>
