--- a/login.html
+++ b/login.html
@@ -12,13 +12,20 @@
 </head>
 
 <body>
-  <!-- The surrounding HTML is left untouched by FirebaseUI.
-     Your app may use that space for branding, controls and other customizations.-->
-  <!-- <h1>Welcome to My Awesome App</h1>
-  <div id="firebaseui-auth-container"></div>
-  <div id="loader">Loading...</div> -->
+  <div class="login">
+    <h3>WELCOME TO</h3>
+    <h2>THE PORT</h2>
+    <h3>a central place for <span style="color: #b31b1b">autonomous</span> <span style="color: #001436">sailboaty</span>
+      <span style="color: #65c8d0">things</span> .</h3>
+    <button onclick="signIn()">SIGN IN</button>
+  </div>
 
-  <button onclick="signIn()">Sign In</button>
+  <div class="footer">
+    <img src="cusail16.png">
+    <br><br>
+    With ♥ from BOps.
+  </div>
+
 
   <script src="login.js"></script>
 </body>
