whoops broke the firebase connection

--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
     <div class="footer">
       <img src="cusail16.png">
       <br><br>
-      With ♥ from BOps.
+      <!-- With ♥ from BOps. -->
     </div>
   </div>
 
