--- a/index.html
+++ b/index.html
@@ -115,6 +115,21 @@
     </div>
   </div>
 
+  <script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+      apiKey: "AIzaSyBm87XbFNx1qbyXw9eBvgovbVXBD5osCpQ",
+      authDomain: "cusail-omnibox-a6705.firebaseapp.com",
+      databaseURL: "https://cusail-omnibox-a6705.firebaseio.com",
+      projectId: "cusail-omnibox-a6705",
+      storageBucket: "cusail-omnibox-a6705.appspot.com",
+      messagingSenderId: "782612915461",
+      appId: "1:782612915461:web:5df3976372f0736f2f436c",
+      measurementId: "G-DLH92W1HM0"
+    };
+    firebase.initializeApp(firebaseConfig);
+    var db = firebase.firestore();
+  </script>
   <script src="links.js"></script>
   <script src="login.js"></script>
 </body>
