--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   </div>
 
   <script src="links.js"></script>
-  <script src="login.js"></script>
+  <!-- <script src="login.js"></script> -->
 </body>
 
 </html>
